--- a/BR-MS/NewPassword.html
+++ b/BR-MS/NewPassword.html
@@ -5,10 +5,13 @@
     <title>普通用户1.1修改密码表单</title>
     <link rel="stylesheet" href="lib/eleme-index.css">
     <style>
+        [v-cloak]{
+            display: none;
+        }
     </style>
 </head>
 <body>
-<div id="app">
+<div id="app" v-cloak>
     <!--普通用户界面 -> aside导航栏 修改密码 ->表单 -->
     <el-form :model="ruleForm2" status-icon :rules="rules2" ref="ruleForm2" label-width="100px" class="demo-ruleForm">
         <el-form-item label="旧密码" prop="oldPass">
