--- a/BR-MS/Import.html
+++ b/BR-MS/Import.html
@@ -8,10 +8,13 @@
         .el-form-item{
             margin:0;
         }
+        [v-cloak]{
+            display: none;
+        }
     </style>
 </head>
 <body>
-<div id="app">
+<div id="app" v-cloak>
     <el-form>
         <hr>
         <!--入库业务-->
