--- a/BR-MS/UserAuth.html
+++ b/BR-MS/UserAuth.html
@@ -27,11 +27,14 @@
         span.no-wrap {
             white-space: nowrap;
         }
+        [v-cloak]{
+            display: none;
+        }
     </style>
 </head>
 <body>
 
-<div id="app">
+<div id="app" v-cloak>
     <el-form id="search" :inline="true" ref="queryParams" label-position="right" label-with="80px" :model="queryParams"
              v-loading.fullscreen="initializing" element-loading-text="正在获取数据"
              element-loading-background="rgba(0,0,0,0.7)">
