--- a/BR-MS/resSmartLookup.html
+++ b/BR-MS/resSmartLookup.html
@@ -8,10 +8,14 @@
         .el-form-item{
             margin:0;
         }
+
+        [v-cloak]{
+            display: none;
+        }
     </style>
 </head>
 <body>
-<div id="app">
+<div id="app" v-cloak>
     <el-container>
         <el-form>
             <!--需求信息-->
