--- a/BR-MS/signup.html
+++ b/BR-MS/signup.html
@@ -62,10 +62,14 @@
             padding:0;
             background-color: #f5f5f5;
         }
+
+        [v-cloak]{
+            display: none;
+        }
     </style>
 </head>
 <body>
-<div id="app">
+<div id="app" v-cloak>
     <el-container>
         <el-header class="header">
             <div id="header-bg">
