完成了 PendingItems.html

--- a/BR-MS/PendingItems.html
+++ b/BR-MS/PendingItems.html
@@ -185,7 +185,7 @@
                 return {
                     createTime: dateFormat(
                         new Date(this.currentRow.createTime),
-                        ""
+                        "yyyy-mm-dd HH:MM:ss"
                     ),
                     end: this.currentRow.destinationAddress
                 }
